TestSuite/errors/err0145.pas
//const set1 : set of byte = [3]+[2,3,'aaa']+set1;
begin
end